--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -15,7 +15,7 @@ mail.timeout=0
 
 mail.admin.address = xs6666@qq.com
 
-log.root=d:\\workspaces\\logs
+log.root=c:\\workspaces\\logs
 
 ############################ »’÷æ…Ë÷√ ##################################
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
