--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -2,7 +2,7 @@
 
 #jdbc c3p0 config
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/account?useUnicode=true&characterEncoding=utf-8
+db.url=jdbc:mysql://localhost:3306/sp_douban?useUnicode=true&characterEncoding=utf-8
 db.username=xs
 db.password=123123123
 db.initialSize=1
