--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -15,7 +15,7 @@ mail.timeout=0
 
 mail.admin.address = xs6666@qq.com
 
-log.root=c:\\workspaces\\logs
+log.root=D:\\workspaces\\logs
 
 ############################ »’÷æ…Ë÷√ ##################################
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
@@ -36,14 +36,14 @@ log4j.appender.stdout.encoding=UTF-8
 
 log4j.appender.A1=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.A1.DatePattern='_'yyyyMMdd'.log'
-log4j.appender.A1.File=${log.root}/accountinfo.log
+log4j.appender.A1.File=${log.root}/spider_douban_info.log
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.Threshold = INFO
 log4j.appender.A1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c  - %m%n
 
 log4j.appender.A2=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.A2.DatePattern='_'yyyyMMdd'.log'
-log4j.appender.A2.File=${log.root}/accounterror.log
+log4j.appender.A2.File=${log.root}/spider_douban_error.log
 log4j.appender.A2.layout=org.apache.log4j.PatternLayout
 log4j.appender.A2.Threshold = ERROR
 log4j.appender.A2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c  - %m%n
