--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
             <version>2.1.1</version>
         </dependency>
         <dependency>
