--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -16,7 +16,7 @@ mail.timeout=0
 mail.admin.address = xs6666@qq.com
 
 log.root=C:\\workspaces\\logs
-
+noauth.urls=auth/doLogin
 ############################ »’÷æ…Ë÷√ ##################################
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 log4j.rootLogger=info, stdout, A1, A2
