--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -2,8 +2,8 @@
 
 #jdbc c3p0 config
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/account?useUnicode=true&characterEncoding=utf-8
-db.username=xs
+db.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
+db.username=root
 db.password=123123123
 db.initialSize=1
 db.maxActive=10
@@ -15,9 +15,9 @@ mail.timeout=0
 
 mail.admin.address = xs6666@qq.com
 
-log.root=c:\\workspaces\\logs
+log.root=/Users/xs/workspaces/logs
 
-############################ 日志设置 ##################################
+############################ 锟斤拷志锟斤拷锟斤拷 ##################################
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 log4j.rootLogger=info, stdout, A1, A2
 ### direct log messages to stdout ###
@@ -25,7 +25,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
-#设置输出日志文件编码（可以控制乱码情况）
+#
 log4j.appender.stdout.encoding=gbk
 
 ### direct messages to file hibernate.log ###
