--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>spider_douban</finalName>
+        <finalName>game-python</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
