--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,12 @@
             <artifactId>jsoup</artifactId>
             <version>1.10.2</version>
         </dependency>
+        <!-- poi处理excel -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.16</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>spider_douban</finalName>
