爬取+调用接口导入系统

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -2,9 +2,9 @@
 
 #jdbc c3p0 config
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
-db.username=root
-db.password=123123123
+db.url=jdbc:mysql://sql-pconsumer01cn-ro03-ext.svc.wecash.net:3306/mobile_card?useUnicode=true&characterEncoding=utf-8
+db.username=xiongshun
+db.password=kqe+pgukFmMusw
 db.initialSize=1
 db.maxActive=10
 
