--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>3.0.1</version>
         </dependency>
         <!-- httpclient -->
         <dependency>
@@ -181,7 +181,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>spider_douban</finalName>
+        <finalName>vip_question</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
