--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>spider_douban</finalName>
