--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -49,3 +49,14 @@ log4j.appender.A2.Threshold = ERROR
 log4j.appender.A2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c  - %m%n
 #log4j.logger.org.hibernate=info
 #log4j.logger.org.hibernate=debug
+
+############################ redis ##################################
+
+redis.host=localhost
+redis.port=6379
+redis.expire=100000
+redis.pool.maxTotal=10
+redis.pool.maxIdle=10
+redis.pool.testOnReturn=true
+redis.pool.timeout=5000
+redis.pool.testOnBorrow=true
