--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -1,13 +1,13 @@
 #application configs
-
-#jdbc c3p0 config
+############################ db setting ##################################
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
+db.url=jdbc:mysql://localhost:3306/sp_douban?useUnicode=true&characterEncoding=utf-8
 db.username=root
 db.password=123123123
 db.initialSize=1
 db.maxActive=10
 
+############################ mail send setting ##################################
 mail.username=15874018464@163.com
 mail.password=
 mail.host=smtp.163.com
@@ -17,7 +17,7 @@ mail.admin.address = xs6666@qq.com
 
 log.root=/Users/xs/workspaces/logs
 
-############################ 日志设置 ##################################
+############################ log setting ##################################
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 log4j.rootLogger=info, stdout, A1, A2
 ### direct log messages to stdout ###
@@ -26,7 +26,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 #设置输出日志文件编码（可以控制乱码情况）
-log4j.appender.stdout.encoding=gbk
+log4j.appender.stdout.encoding=utf-8
 
 ### direct messages to file hibernate.log ###
 #log4j.appender.file=org.apache.log4j.FileAppender
@@ -51,7 +51,6 @@ log4j.appender.A2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c  
 #log4j.logger.org.hibernate=debug
 
 ############################ redis ##################################
-
 redis.host=localhost
 redis.port=6379
 redis.expire=100000
@@ -60,3 +59,11 @@ redis.pool.maxIdle=10
 redis.pool.testOnReturn=true
 redis.pool.timeout=5000
 redis.pool.testOnBorrow=true
+############################ elasticSearchConnection ##################################
+es.host=localhost
+es.port=9200
+es.timeOutMs=5000
+############################ business ##################################
+pic.file.root.path=/Users/xs/workspaces/pic/root/
+
+
