--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>vip_question</finalName>
+        <finalName>vip</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
