--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -60,3 +60,9 @@ redis.pool.maxIdle=10
 redis.pool.testOnReturn=true
 redis.pool.timeout=5000
 redis.pool.testOnBorrow=true
+
+#####################
+auth.common.url=http://localhost:8020/cbWeb/
+auth.open=1
+auth.login.url=static/login.html
+auth.nocheck.url=static/login.html
