--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
 
         <!-- spring -->
         <dependency>
@@ -198,7 +204,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>spider_douban</finalName>
+        <finalName>cbWeb</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
