--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
     <display-name>web</display-name>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:config/applicationContext.xml</param-value>
+        <param-value>classpath*:config/spring-web.xml</param-value>
     </context-param>
     <listener>
         <listener-class>xs.spider.base.init.Log4jInit</listener-class>
@@ -66,4 +66,7 @@
         <filter-name>shiroFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <welcome-file-list>
+        <welcome-file>/static/redirect.html</welcome-file>
+    </welcome-file-list>
 </web-app>
