--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -66,3 +66,4 @@ auth.common.url=http://localhost:8020/cbWeb/
 auth.open=1
 auth.login.url=static/login.html
 auth.nocheck.url=static/login.html
+admin.role.id=1
