--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -3,7 +3,7 @@
 #jdbc c3p0 config
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/changshashuibengchang?useUnicode=true&characterEncoding=utf-8
-db.username=root
+db.username=xs
 db.password=123123123
 db.initialSize=1
 db.maxActive=10
