--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -26,7 +26,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 #设置输出日志文件编码（可以控制乱码情况）
-log4j.appender.stdout.encoding=gbk
+log4j.appender.stdout.encoding=utf-8
 
 ### direct messages to file hibernate.log ###
 #log4j.appender.file=org.apache.log4j.FileAppender
