--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -15,7 +15,8 @@ mail.timeout=0
 
 mail.admin.address = xs6666@qq.com
 
-log.root=/Users/xs/workspaces/logs
+#log.root=/Users/xs/workspaces/logs
+log.root=D:\\Workspaces\\logs
 
 ############################ 日志设置 ##################################
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
@@ -26,7 +27,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 #设置输出日志文件编码（可以控制乱码情况）
-log4j.appender.stdout.encoding=utf-8
+log4j.appender.stdout.encoding=gbk
 
 ### direct messages to file hibernate.log ###
 #log4j.appender.file=org.apache.log4j.FileAppender
