--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -4,7 +4,7 @@
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/changshashuibengchang?useUnicode=true&characterEncoding=utf-8
 db.username=xs
-db.password=123123123
+db.password=xS6dfB7xHI75Jl9W
 db.initialSize=1
 db.maxActive=10
 
