--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -21,6 +21,7 @@ log.root=/Users/xs/workspaces/logs
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 log4j.rootLogger=info, stdout, A1, A2
 ### direct log messages to stdout ###
+log4j.appender.stdout.Threshold = DEBUG
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -36,14 +37,14 @@ log4j.appender.stdout.encoding=utf-8
 
 log4j.appender.A1=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.A1.DatePattern='_'yyyyMMdd'.log'
-log4j.appender.A1.File=${log.root}/accountinfo.log
+log4j.appender.A1.File=${log.root}/cbWebInfo.log
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.Threshold = INFO
 log4j.appender.A1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c  - %m%n
 
 log4j.appender.A2=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.A2.DatePattern='_'yyyyMMdd'.log'
-log4j.appender.A2.File=${log.root}/accounterror.log
+log4j.appender.A2.File=${log.root}/cbWebError.log
 log4j.appender.A2.layout=org.apache.log4j.PatternLayout
 log4j.appender.A2.Threshold = ERROR
 log4j.appender.A2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %c  - %m%n
